# ctest-unity-stm32-testing-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  STM32F405XX_FLASH.ld  index.html  style.css
.teamcity/: pom.xml  settings.kts
stm32f405rg-test/: .mxproject  CMakeLists.txt  README.md  stm32f405rg-test.ioc
stm32f405rg-test/Core/Src/: main.c
stm32f405rg-test/cmake/stm32cubemx/: CMakeLists.txt
tests/: test_sample.c  test_sample_success.c
